@@ -30,6 +30,5 @@ extern struct tm* R_gmtime (const R_time_t*);
 extern struct tm* R_localtime (const R_time_t*);
 extern R_time_t R_mktime (struct tm*);
 extern void R_tzset(void);
-#define tzname R_tzname
 extern char *R_tzname[2];
 
